profilelist1exp/unpackaged/objects/Business_Performance__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_with_Incumbents__c</fullName>
        <label>Accounts with Incumbents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Contacts__c</fullName>
        <label>Active Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_DMU_Accounts__c</fullName>
        <label>Active DMU Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activities_L7D__c</fullName>
        <label>Activities L7D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chatter_Only_with_Login_in_L7D__c</fullName>
        <label>Chatter Only with Login in L7D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment_Count__c</fullName>
        <label>Comment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Updates_L30D__c</fullName>
        <label>Contact Updates L30D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Contacts__c</fullName>
        <label>Decision Making Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_Item_Type__c</fullName>
        <label>Feed Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_Requiring_Follow_up_L7D__c</fullName>
        <label>Leads Requiring Follow-up L7D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Leads_L7D__c</fullName>
        <label>New Leads L7D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_Parent_Name__c</fullName>
        <label>Regional Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Mkt_Users_with_Login_in_L7D__c</fullName>
        <label>Sales &amp; Mkt Users with Login in L7D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Active_Chatter_Users__c</fullName>
        <label>Total Active Chatter Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Active_Users__c</fullName>
        <label>Total Active Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_and_Mkt_Users__c</fullName>
        <label>Total Sales and Mkt Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trip_Reports_L7D__c</fullName>
        <label>Trip Reports L7D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unweighted_Rev__c</fullName>
        <label>Unweighted Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Users_with_Login_in_L7D__c</fullName>
        <label>Users with Login in L7D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Opps__c</fullName>
        <label># of Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Performance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Report_Name__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BP-{0000000000}</displayFormat>
        <label>Business Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>